# movie-plot-nlp-project

./: .gitattributes  .gitignore  LICENSE  NLTK_for_Paragraph_split.ipynb  README.md  cleaning.py  genre-clean.ipynb
Cleaning and Preprocessing/: CastAndDirectorClean.ipynb  Combined_Yili_and_Ethan_Scrape.ipynb  IMDB_Web_Scraping_2 (3).ipynb  MergeTwoDataset.ipynb  README.md  cleaning.py  combining-revenue-and-summary-fragments.ipynb  imdb_summaries.ipynb  pruning-summaries.ipynb  summary_generator.ipynb  test_cleaning.py  ttIDmerging.ipynb
Data/: imdb_queries_test.csv
Visualization/: data_visualization.ipynb
data/: embedded_corpus_tensor.pt  wikipedia_plots.pkl
data/embedded_corpus_tensor/: xat
exploratory_notebooks/: plot-summarizer.ipynb
inference-models/: embed_and_rerank_no_revenue.ipynb  naive_lexical_search.ipynb
notebooks/cleaning-and-preprocessing/: CastAndDirectorClean.ipynb  Combined_Yili_and_Ethan_Scrape.ipynb  IMDB_Web_Scraping.ipynb  MergeTwoDataset.ipynb  README.md  genre-clean.ipynb  imdb_summaries.ipynb  ttIDmerging.ipynb
notebooks/testing/: README.md  embed_and_rerank.ipynb  okapi_bm25.ipynb  (+1 more)
scripts/: .reconstruct_large_data_files.sh.swp  reconstruct_large_data_files.sh
semantic-search-web-interface/: pyproject.toml
semantic-search-web-interface/semantic_search_web_interface/: __init__.py  inference.py
semantic-search-web-interface/semantic_search_web_interface/templates/: base.html  result.html  search.html
semantic-search-web-interface/tests/: test_semantic_search_web_interface.py
web_interface/: app.py  inference.py
(+3 files in other folders)
