[tool.poetry]
name = "semantic-search-web-interface"
version = "0.1.0"
description = ""
authors = ["Sayantan Khan <sayantangkhan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.11.0"
sentence-transformers = "^2.2.0"
Flask = "^2.1.2"
Jinja2 = "^3.1.2"
WTForms = "^3.0.1"
Flask-WTF = "^1.0.1"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
